thread study 08 - restart